# static-api-authentication-proxy

./: .gitignore  Cargo.toml  README.md  flake.nix  hashes.toml  package.json
docs/superpowers/plans/: 2026-07-13-multi-host-config.md
docs/superpowers/specs/: 2026-07-13-multi-host-config-design.md
scripts/: build-cargo.js  update-cargo.js  vendor-cargo.js
src/: main.rs
test_data/: config.json
