[package]
name = "static-ip-authentication-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11.8"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
thiserror = "2.0.17"
